更新favicon和HTML文件

--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Synapticore - Connecting AI with Human Life</title>
     <!-- Favicon -->
     <link rel="icon" href="favicon.png" type="image/png">
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <link rel="apple-touch-icon" href="favicon.png">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -1132,7 +1130,7 @@
                     <ul>
                         <li><a href="#products">Products & Services</a></li>
                         <li><a href="#advantages">Technology Advantages</a></li>
-                        <li><a href="#tags">Business Tags</a></li>
+                        <li><a href="#tags">Demo</a></li>
                     </ul>
                 </div>
                 
