--- a/index.html
+++ b/index.html
@@ -920,13 +920,10 @@
                         </h3>
                     </div>
                     <div class="service-body">
-                        <!-- <p class="service-description">
+                        <p class="service-description">
                             Integrates leading AI capabilities worldwide, providing seamless access to diverse AI models and services.
-                        </p> -->
+                        </p>
                         <ul class="service-features">
-                            <li class="service-feature">
-                                Integrates leading AI capabilities worldwide, providing seamless access to diverse AI models and services.
-                            </li>
                             <li class="service-feature">
                                 Designed for developers, enterprises, and individuals to enhance AI adoption and application.
                             </li>
@@ -943,13 +940,10 @@
                         </h3>
                     </div>
                     <div class="service-body">
-                        <!-- <p class="service-description">
+                        <p class="service-description">
                             An open ecosystem that fosters collaboration between AI developers and users.
-                        </p> -->
+                        </p>
                         <ul class="service-features">
-                            <li class="service-feature">
-                                An open ecosystem that fosters collaboration between AI developers and users.
-                            </li>
                             <li class="service-feature">
                                 Provides development tools, tutorials, and technical support.
                             </li>
@@ -971,9 +965,6 @@
                         </p>
                         <ul class="service-features">
                             <li class="service-feature">
-                                AI-powered solutions for enterprise operations and service optimization.
-                            </li>
-                            <li class="service-feature">
                                 RPA + AI Process Automation Suite: Successfully deployed across multiple enterprises, reducing manual operation costs by 60%.
                             </li>
                             <li class="service-feature">
@@ -981,12 +972,6 @@
                             </li>
                             <li class="service-feature">
                                 Process Automation: AI-powered workflow optimization to streamline business operations.
-                            </li>
-                            <li class="service-feature">
-                                Patent Application Assistance: AI-assisted patent strategy and application processes.
-                            </li>
-                            <li class="service-feature">
-                                Automated Financial Accounting: AI-enhanced financial solutions.
                             </li>
                         </ul>
                     </div>
@@ -1001,13 +986,10 @@
                         </h3>
                     </div>
                     <div class="service-body">
-                        <!-- <p class="service-description">
+                        <p class="service-description">
                             AI-driven matching services for household management, recruitment, and matchmaking.
-                        </p> -->
+                        </p>
                         <ul class="service-features">
-                            <li class="service-feature">
-                                AI-driven matching services for household management, recruitment, and matchmaking.
-                            </li>
                             <li class="service-feature">
                                 Optimized solutions for personalized and efficient resource allocation.
                             </li>
@@ -1024,13 +1006,10 @@
                         </h3>
                     </div>
                     <div class="service-body">
-                        <!-- <p class="service-description">
+                        <p class="service-description">
                             AI-powered data analytics that assist investors and enterprises in making informed decisions.
-                        </p> -->
+                        </p>
                         <ul class="service-features">
-                            <li class="service-feature">
-                                AI-powered data analytics that assist investors and enterprises in making informed decisions.
-                            </li>
                             <li class="service-feature">
                                 Advanced predictive modeling to optimize business strategies.
                             </li>
@@ -1047,13 +1026,10 @@
                         </h3>
                     </div>
                     <div class="service-body">
-                        <!-- <p class="service-description">
+                        <p class="service-description">
                             The world's first AI astrology engine certified by the Astrological Association.
-                        </p> -->
+                        </p>
                         <ul class="service-features">
-                            <li class="service-feature">
-                                The world's first AI astrology engine certified by the Astrological Association.
-                            </li>
                             <li class="service-feature">
                                 Combines big data analysis with personalized fortune predictions.
                             </li>
