更新网站内容和SVG图标

--- a/index.html
+++ b/index.html
@@ -1125,7 +1125,7 @@
                         <a href="mailto:synapticore2025@gmail.com" class="social-link" title="Email">
                             <i class="fas fa-envelope"></i>
                         </a>
-                        <a href="https://x.com/synapticore_ai" class="social-link" title="Twitter">
+                        <a href="https://x.com/synapticore_tech" class="social-link" title="Twitter">
                             <i class="fab fa-twitter"></i>
                         </a>
                         <a href="https://t.me/+mpsm-8lgcrszZGU1" class="social-link" title="Telegram">
