设置logo-text.svg图片宽度为页面宽度的50%

--- a/index.html
+++ b/index.html
@@ -894,8 +894,7 @@
         <div class="container header-content">
             <div class="logo-container">
                 <img src="logo-brain-transparent.png" alt="Synapticore Brain Logo" class="brain-logo">
-                <!-- <h2 class="synapticore-title">SYNAPTICORE</h2> -->
-                <img src="logo-text.svg" alt="Synapticore" >
+                <img src="logo-text.svg" alt="Synapticore" style="width: 50%; max-width: 100%;">
             </div>
             <h1 class="slogan">Connecting AI with Human Life</h1>
             
