更新网站布局和slogan样式优化

--- a/index.html
+++ b/index.html
@@ -916,7 +916,7 @@
                     <div class="service-header">
                         <h3 class="service-title">
                             <i class="fas fa-network-wired"></i>
-                            1 OmniAI Aggregator
+                            OmniAI Aggregator
                         </h3>
                     </div>
                     <div class="service-body">
@@ -933,7 +933,7 @@
                     <div class="service-header">
                         <h3 class="service-title">
                             <i class="fas fa-brain"></i>
-                            2 SynaBrain Intelligent Trading
+                            SynaBrain Intelligent Trading
                         </h3>
                     </div>
                     <div class="service-body">
@@ -956,7 +956,7 @@
                     <div class="service-header">
                         <h3 class="service-title">
                             <i class="fas fa-users-cog"></i>
-                            3 SynaForge Developer Community
+                            SynaForge Developer Community
                         </h3>
                     </div>
                     <div class="service-body">
@@ -976,7 +976,7 @@
                     <div class="service-header">
                         <h3 class="service-title">
                             <i class="fas fa-building"></i>
-                            4 SynaCore Enterprise Hub
+                            SynaCore Enterprise Hub
                         </h3>
                     </div>
                     <div class="service-body">
@@ -1002,7 +1002,7 @@
                     <div class="service-header">
                         <h3 class="service-title">
                             <i class="fas fa-project-diagram"></i>
-                            5 Smart Resource Mapping
+                            Smart Resource Mapping
                         </h3>
                     </div>
                     <div class="service-body">
@@ -1022,7 +1022,7 @@
                     <div class="service-header">
                         <h3 class="service-title">
                             <i class="fas fa-star"></i>
-                            6 Spiritual Computing Lab
+                            Spiritual Computing Lab
                         </h3>
                     </div>
                     <div class="service-body">
