更新产品名称和描述，修改.gitignore忽略node_modules和.venv目录

--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
                     <div class="service-header">
                         <h3 class="service-title">
                             <i class="fas fa-star"></i>
-                            Digisoul Digital Nomad
+                            Digisoul 
                         </h3>
                     </div>
                     <div class="service-body">
