更新网站favicon和样式

--- a/index.html
+++ b/index.html
@@ -1130,7 +1130,10 @@
             <div class="tags-container">
                 <div class="tag">AI-Powered Enterprise Solutions</div>
                 <div class="tag">Data Intelligence</div>
-                <div class="tag">RPA</div>
+                <div class="tag">Web3 Identity Solutions</div>
+                <div class="tag">Cognitive Workflow Automation</div>
+                <div class="tag">Developer Ecosystem & Resources</div>
+                <div class="tag">AI-Enhanced Mental Wellness Tools</div>
             </div>
         </div>
     </section>
