--- a/index.html
+++ b/index.html
@@ -1155,10 +1155,10 @@
                         <a href="mailto:synapticore2025@gmail.com" class="social-link" title="Email">
                             <i class="fas fa-envelope"></i>
                         </a>
-                        <a href="https://x.com/synapticore_tech" class="social-link" title="Twitter">
+                        <a href="https://x.com/synapticoretech" class="social-link" title="Twitter">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://x.com/synapticore_tech" class="social-link" title="Telegram">
+                        <a href="https://x.com/synapticoretech" class="social-link" title="Telegram">
                             <i class="fab fa-telegram"></i>
                         </a>
                     </div>
@@ -1181,7 +1181,7 @@
                     </div>
                     <div class="contact-info">
                         <i class="fas fa-envelope"></i>
-                        <a href="mailto:synapticore2025@gmail.com">contact@synapticore.org</a>
+                        <p>contact@synapticore.org</p>
                     </div>
                 </div>
             </div>
