更新网站设计和配置 - 更新 .gitignore 文件，排除虚拟环境和临时文件 - 完善网站内容和样式设计 - 添加动画效果和响应式布局 - 更新社交媒体链接和联系信息

--- a/index.html
+++ b/index.html
@@ -1152,7 +1152,7 @@
                         <a href="http://synapticore.org/" class="social-link" title="Website">
                             <i class="fas fa-globe"></i>
                         </a>
-                        <a href="mailto:synapticore2025@gmail.com" class="social-link" title="Email">
+                        <a href="mailto:contact@synapticore.org" class="social-link" title="Email">
                             <i class="fas fa-envelope"></i>
                         </a>
                         <a href="https://x.com/synapticoretech" class="social-link" title="Twitter">
@@ -1187,7 +1187,7 @@
             </div>
             
             <div class="copyright">
-                <p> © 2025 Synapticore All Rights Reserved</p>
+                <p> © 2025 Synapticore Technology Co., Ltd. All Rights Reserved</p>
             </div>
         </div>
     </footer>
